[tool.poetry]
name = "pyexcel-xlsxwx"
version = "0.1.8"
description = "Save pyexcel data with XlsxWriter, while retaining good formatting."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/patarapolw/pyexcel-xlsxwx"
homepage = "https://github.com/patarapolw/pyexcel-xlsxwx"

keywords = ['pyexcel', 'excel', 'xlsxwriter']

[tool.poetry.dependencies]
python = ">=3.6"
"ruamel.yaml" = "^0.17.20"
XlsxWriter = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyexcel = "^0.6.7"
pyexcel-xlsx = "^0.6.0"
